grammar.js
    program: ($) => seq(optional($.hash_bang_line), repeat($._statement)),

    _statement: ($) =>
      choice(
        $.export_statement,
        $.import_statement,
        $.debugger_statement,
        $.expression_statement,
        $._declaration,
        $.statement_block,

        $.if_statement,
        $.switch_statement,
        $.for_statement,
        $.for_in_statement,
        $.while_statement,
        $.do_statement,
        $.try_statement,
        $.with_statement,

        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.throw_statement,
        $.empty_statement,
        $.labeled_statement,
        $.destiny_statement
      ),

    expression_statement: ($) => seq($._expressions, $._semicolon),

    variable_declaration: ($) =>
      seq("var", commaSep1($.variable_declarator), $._semicolon),

    variable_declarator: ($) =>
      seq(
        field("name", choice($.identifier, $._destructuring_pattern)),
        optional($._initializer)
      ),

    statement_block: ($) =>
      prec.right(
        seq("{", repeat($._statement), "}", optional($._automatic_semicolon))
      ),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthesized_expression),
          field("consequence", $._statement),
          optional(field("alternative", $.else_clause))
        )
      ),

    return_statement: ($) =>
      seq("return", optional($._expressions), $._semicolon),

    empty_statement: ($) => ";",

    parenthesized_expression: ($) => seq("(", $._expressions, ")"),

    //
    // Expressions
    //
    _expressions: ($) => choice($._expression, $.sequence_expression),

    _expression: ($) =>
      choice(
        $._primary_expression,
        $._jsx_element,
        $.jsx_fragment,
        $.assignment_expression,
        $.augmented_assignment_expression,
        $.await_expression,
        $.unary_expression,
        $.binary_expression,
        $.ternary_expression,
        $.update_expression,
        $.new_expression,
        $.yield_expression
      ),

    _primary_expression: ($) =>
      choice(
        $.this,
        $.super,
        $.identifier,
        alias($._reserved_identifier, $.identifier),
        $.number,
        $.string,
        $.template_string,
        $.regex,
        $.true,
        $.false,
        $.null,
        $.undefined,
        $.import,
        $.object,
        $.array,
        $.function,
        $.arrow_function,
        $.generator_function,
        $.class,
        $.parenthesized_expression,
        $.subscript_expression,
        $.member_expression,
        $.meta_property,
        $.call_expression
      ),

    yield_expression: ($) =>
      prec.right(
        seq("yield", choice(seq("*", $._expression), optional($._expression)))
      ),

    object: ($) =>
      prec(
        PREC.OBJECT,
        seq(
          "{",
          commaSep(
            optional(
              choice(
                $.pair,
                $.spread_element,
                $.method_definition,
                $.assignment_pattern,
                alias(
                  choice($.identifier, $._reserved_identifier),
                  $.shorthand_property_identifier
                )
              )
            )
          ),
          "}"
        )
      ),

    assignment_pattern: ($) =>
      seq(
        field(
          "left",
          choice(
            alias(
              choice($._reserved_identifier, $.identifier),
              $.shorthand_property_identifier
            ),
            $._destructuring_pattern
          )
        ),
        "=",
        field("right", $._expression)
      ),

    array: ($) =>
      seq(
        "[",
        commaSep(optional(choice($._expression, $.spread_element))),
        "]"
      ),

    jsx_element: ($) =>
      seq(
        field("open_tag", $.jsx_opening_element),
        repeat($._jsx_child),
        field("close_tag", $.jsx_closing_element)
      ),

    jsx_fragment: ($) => seq("<", ">", repeat($._jsx_child), "<", "/", ">"),

    jsx_text: ($) => /[^{}<>]+/,

    jsx_expression: ($) =>
      seq(
        "{",
        optional(
          choice($._expression, $.sequence_expression, $.spread_element)
        ),
        "}"
      ),

    _jsx_child: ($) =>
      choice($.jsx_text, $._jsx_element, $.jsx_fragment, $.jsx_expression),

    jsx_opening_element: ($) =>
      prec.dynamic(
        -1,
        seq(
          "<",
          field("name", $._jsx_element_name),
          repeat(field("attribute", $._jsx_attribute)),
          ">"
        )
      ),

    _jsx_identifier: ($) =>
      choice(alias($.jsx_identifier, $.identifier), $.identifier),

    nested_identifier: ($) =>
      prec(
        PREC.MEMBER,
        seq(choice($.identifier, $.nested_identifier), ".", $.identifier)
      ),

    jsx_namespace_name: ($) => seq($._jsx_identifier, ":", $._jsx_identifier),

    _jsx_element_name: ($) =>
      choice($._jsx_identifier, $.nested_identifier, $.jsx_namespace_name),

    jsx_closing_element: ($) =>
      seq("<", "/", field("name", $._jsx_element_name), ">"),

    jsx_self_closing_element: ($) =>
      seq(
        "<",
        field("name", $._jsx_element_name),
        repeat(field("attribute", $._jsx_attribute)),
        "/",
        ">"
      ),

    _jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

    _jsx_attribute_name: ($) =>
      choice(
        alias($._jsx_identifier, $.property_identifier),
        $.jsx_namespace_name
      ),

    jsx_attribute: ($) =>
      seq($._jsx_attribute_name, optional(seq("=", $._jsx_attribute_value))),

    _jsx_attribute_value: ($) =>
      choice($.string, $.jsx_expression, $._jsx_element, $.jsx_fragment),

    class_declaration: ($) =>
      prec(
        PREC.DECLARATION,
        seq(
          repeat(field("decorator", $.decorator)),
          "class",
          field("name", $.identifier),
          optional($.class_heritage),
          field("body", $.class_body),
          optional($._automatic_semicolon)
        )
      ),

    class_heritage: ($) => seq("extends", $._expression),

    function: ($) =>
      seq(
        optional("async"),
        "function",
        field("name", optional($.identifier)),
        $._call_signature,
        field("body", $.statement_block)
      ),

    function_declaration: ($) =>
      prec.right(
        PREC.DECLARATION,
        seq(
          optional("async"),
          "function",
          field("name", $.identifier),
          $._call_signature,
          field("body", $.statement_block),
          optional($._automatic_semicolon)
        )
      ),

    generator_function: ($) =>
      seq(
        optional("async"),
        "function",
        "*",
        field("name", optional($.identifier)),
        $._call_signature,
        field("body", $.statement_block)
      ),

    generator_function_declaration: ($) =>
      prec.right(
        PREC.DECLARATION,
        seq(
          optional("async"),
          "function",
          "*",
          field("name", $.identifier),
          $._call_signature,
          field("body", $.statement_block),
          optional($._automatic_semicolon)
        )
      ),

    arrow_function: ($) =>
      seq(
        optional("async"),
        choice(
          field(
            "parameter",
            choice(alias($._reserved_identifier, $.identifier), $.identifier)
          ),
          $._call_signature
        ),
        "=>",
        field("body", choice($._expression, $.statement_block))
      ),

    // Override
    _call_signature: ($) => seq(field("parameters", $.formal_parameters)),

    call_expression: ($) =>
      choice(
        prec(
          PREC.CALL,
          seq(
            field("function", $._expression),
            field("arguments", choice($.arguments, $.template_string))
          )
        ),
        prec(
          PREC.MEMBER,
          seq(
            field("function", $._primary_expression),
            "?.",
            field("arguments", $.arguments)
          )
        )
      ),

    new_expression: ($) =>
      prec.right(
        PREC.NEW,
        seq(
          "new",
          field("constructor", $._primary_expression),
          field("arguments", optional(prec.dynamic(1, $.arguments)))
        )
      ),

    await_expression: ($) => seq("await", $._expression),

    member_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field("object", choice($._expression, $._primary_expression)),
          choice(".", "?."),
          field("property", alias($.identifier, $.property_identifier))
        )
      ),

    subscript_expression: ($) =>
      prec.right(
        PREC.MEMBER,
        seq(
          field("object", choice($._expression, $._primary_expression)),
          optional("?."),
          "[",
          field("index", $._expressions),
          "]"
        )
      ),

    _lhs_expression: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        $.identifier,
        alias($._reserved_identifier, $.identifier),
        $._destructuring_pattern
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.parenthesized_expression, $._lhs_expression)),
          "=",
          field("right", $._expression)
        )
      ),

    _augmented_assignment_lhs: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        alias($._reserved_identifier, $.identifier),
        $.identifier,
        $.parenthesized_expression
      ),

    augmented_assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", $._augmented_assignment_lhs),
          choice(
            "+=",
            "-=",
            "*=",
            "/=",
            "%=",
            "^=",
            "&=",
            "|=",
            ">>=",
            ">>>=",
            "<<=",
            "**=",
            "&&=",
            "||=",
            "??="
          ),
          field("right", $._expression)
        )
      ),

    _initializer: ($) => seq("=", field("value", $._expression)),

    _destructuring_pattern: ($) =>
      choice(
        alias($.object, $.object_pattern),
        alias($.array, $.array_pattern)
      ),

    spread_element: ($) => seq("...", $._expression),

    ternary_expression: ($) =>
      prec.right(
        PREC.TERNARY,
        seq(
          field("condition", $._expression),
          "?",
          field("consequence", $._expression),
          ":",
          field("alternative", $._expression)
        )
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["&&", PREC.AND],
          ["||", PREC.OR],
          [">>", PREC.TIMES],
          [">>>", PREC.TIMES],
          ["<<", PREC.TIMES],
          ["&", PREC.AND],
          ["^", PREC.OR],
          ["|", PREC.OR],
          ["+", PREC.PLUS],
          ["-", PREC.PLUS],
          ["*", PREC.TIMES],
          ["/", PREC.TIMES],
          ["%", PREC.TIMES],
          ["**", PREC.EXP],
          ["<", PREC.REL],
          ["<=", PREC.REL],
          ["==", PREC.REL],
          ["===", PREC.REL],
          ["!=", PREC.REL],
          ["!==", PREC.REL],
          [">=", PREC.REL],
          [">", PREC.REL],
          ["??", PREC.TERNARY],
          ["instanceof", PREC.REL],
          ["in", PREC.REL],
          ["as", PREC.AS],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression)
            )
          )
        )
      ),

    unary_expression: ($) =>
      choice(
        ...[
          ["!", PREC.NOT],
          ["~", PREC.NOT],
          ["-", PREC.NEG],
          ["+", PREC.NEG],
          ["typeof", PREC.TYPEOF],
          ["void", PREC.VOID],
          ["delete", PREC.DELETE],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(field("operator", operator), field("argument", $._expression))
          )
        )
      ),

    update_expression: ($) =>
      prec.left(
        PREC.INC,
        choice(
          seq(
            field("argument", $._expression),
            field("operator", choice("++", "--"))
          ),
          seq(
            field("operator", choice("++", "--")),
            field("argument", $._expression)
          )
        )
      ),

    sequence_expression: ($) =>
      prec(
        PREC.COMMA,
        seq(
          field("left", $._expression),
          ",",
          field("right", choice($.sequence_expression, $._expression))
        )
      ),

    //
    // Primitives
    //

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              token.immediate(prec(PREC.STRING, /[^"\\\n]+|\\\r?\n/)),
              $.escape_sequence
            )
          ),
          '"'
        ),
        seq(
          "'",
          repeat(
            choice(
              token.immediate(prec(PREC.STRING, /[^'\\\n]+|\\\r?\n/)),
              $.escape_sequence
            )
          ),
          "'"
        )
      ),

    escape_sequence: ($) =>
      token.immediate(
        seq(
          "\\",
          choice(
            /[^xu0-7]/,
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /u[0-9a-fA-F]{4}/,
            /u{[0-9a-fA-F]+}/
          )
        )
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: ($) =>
      token(
        prec(
          PREC.COMMENT,
          choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))
        )
      ),

    template_string: ($) =>
      seq(
        "`",
        repeat(
          choice($._template_chars, $.escape_sequence, $.template_substitution)
        ),
        "`"
      ),

    template_substitution: ($) => seq("${", $._expressions, "}"),

    regex: ($) =>
      seq(
        "/",
        field("pattern", $.regex_pattern),
        token.immediate("/"),
        optional(field("flags", $.regex_flags))
      ),

    regex_pattern: ($) =>
      token.immediate(
        repeat1(
          choice(
            seq(
              "[",
              repeat(
                choice(
                  seq("\\", /./), // escaped character
                  /[^\]\n\\]/ // any character besides ']' or '\n'
                )
              ),
              "]"
            ), // square-bracket-delimited character class
            seq("\\", /./), // escaped character
            /[^/\\\[\n]/ // any character besides '[', '\', '/', '\n'
          )
        )
      ),

    regex_flags: ($) => token.immediate(/[a-z]+/),

    identifier: ($) => {
      const alpha = /[^\x00-\x1F\s0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      const alphanumeric = /[^\x00-\x1F\s:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    this: ($) => "this",
    super: ($) => "super",
    true: ($) => "true",
    false: ($) => "false",
    null: ($) => "null",
    undefined: ($) => "undefined",

    //
    // Expression components
    //

    arguments: ($) =>
      prec(
        PREC.CALL,
        seq(
          "(",
          commaSep(optional(choice($._expression, $.spread_element))),
          ")"
        )
      ),

    decorator: ($) =>
      seq(
        "@",
        choice(
          $.identifier,
          alias($.decorator_member_expression, $.member_expression),
          alias($.decorator_call_expression, $.call_expression)
        )
      ),

    computed_property_name: ($) => seq("[", $._expression, "]"),
